--- a/blog.html
+++ b/blog.html
@@ -12,3 +12,12 @@ title: Blog
     </li>
   {% endfor %}
 </ul>
+
+<ul>
+  {% for post in site.posts %}
+    <li>
+      <h2><a href="{{ book-reviews.url }}">{{ book-reviews.title }}</a></h2>
+      <p>{{ post.excerpt }}</p>
+    </li>
+  {% endfor %}
+</ul>
