--- a/blog.html
+++ b/blog.html
@@ -13,10 +13,21 @@ title: Blog
   {% endfor %}
 </ul>
 
+
 <ul>
-  {% for post in site.posts %}
+  {% for post in site.book-reviews %}
     <li>
       <h2><a href="{{ book-reviews.url }}">{{ book-reviews.title }}</a></h2>
+      <p>{{ post.excerpt }}</p>
+    </li>
+  {% endfor %}
+</ul>
+
+
+<ul>
+  {% for post in site.research-articles %}
+    <li>
+      <h2><a href="{{ research-articles.url }}">{{ research-articles.title }}</a></h2>
       <p>{{ post.excerpt }}</p>
     </li>
   {% endfor %}
