--- a/research-articles.html
+++ b/research-articles.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Research articles
+title: Research Articles
 ---
 <h1>{{ page.title }}</h1>
 <p>{{ page.date | date_to_string }} - {{ page.author }}</p>
