--- a/research-articles.html
+++ b/research-articles.html
@@ -1,8 +1,15 @@
 ---
 layout: default
-title: Research Articles
+title: Reseach Articles
 ---
-<h1>{{ page.title }}</h1>
-<p>{{ page.date | date_to_string }} - {{ page.author }}</p>
+<h1>Latest Publications</h1>
 
-{{ content }}
+
+<ul>
+  {% for post in site.research-articles %}
+    <li>
+      <h2><a href="{{ research-articles.url }}">{{ research-articles.title }}</a></h2>
+      <p>{{ post.excerpt }}</p>
+    </li>
+  {% endfor %}
+</ul>
