--- a/research-articles.html
+++ b/research-articles.html
@@ -9,7 +9,7 @@ title: Reseach Articles
   {% for post in site.research-articles %}
     <li>
       <h2><a href="{{ research-articles.url }}">{{ research-articles.title }}</a></h2>
-      <p>{{ post.excerpt }}</p>
+      <p>{{ research-articles.excerpt }}</p>
     </li>
   {% endfor %}
 </ul>
