--- a/research-articles.html
+++ b/research-articles.html
@@ -1,9 +1,8 @@
 ---
 layout: default
-title: Reseach Articles
+title: Research Articles
 ---
 <h1>Latest Publications</h1>
-
 
 <ul>
   {% for post in site.research-articles %}
