--- a/book-reviews.html
+++ b/book-reviews.html
@@ -1,7 +1,15 @@
 ---
 layout: default
+title: Book Reviews
 ---
-<h1>{{ page.title }}</h1>
-<p>{{ page.date | date_to_string }} - {{ page.author }}</p>
 
-{{ content }}
+<h1>Latest Book Reviews</h1>
+
+<ul>
+  {% for post in site.posts %}
+    <li>
+      <h2><a href="{{ book-review.url }}">{{ book-review.title }}</a></h2>
+      <p>{{ post.excerpt }}</p>
+    </li>
+  {% endfor %}
+</ul>
