--- a/research-articles.html
+++ b/research-articles.html
@@ -2,12 +2,13 @@
 layout: default
 title: Research Articles
 ---
+
 <h1>Latest Publications</h1>
 
 <ul>
   {% for post in site.research-articles %}
     <li>
-      <h2><a href="{{ research-articles.url }}">{{ research-articles.title }}</a></h2>
+      <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
       <p>{{ post.excerpt }}</p>
     </li>
   {% endfor %}
