--- a/index.html
+++ b/index.html
@@ -72,10 +72,12 @@
 <div class="container">
     <h2 id="about-me">About Me</h2>
 <figure class="avatar">
-    <img src="https://www.magdalenabreyer.net/breyer_2022.jpg"/> 
+    <img src="https://kennethbunker.github.io/me.png"/> 
 </figure>
 
-<p>I am a <strong>PhD Candidate at the Department of Political Science at the University of Zurich</strong>. During the Fall semester 2021, I was a visiting PhD researcher at the University of Amsterdam, in the Program Group Challenges to Democratic Representation. I received my M.A. in Political Science at the Freie Universität Berlin, after studying in Freiburg and Krakow for my B.A.</p>
+<p>## Hello world!
+
+I am a political consultant, an academic, and a columnist. I contribute to two organizations that provide discrete, reliable solutions to investors, stakeholders and politicians worldwide: contact me personally for more information. I also regularly participate as a current affairs television, radio and newspaper commentator (see sidebar).</p>
 <hr>
 <h2 id="research-interests">Research Interests</h2>
 <p>My research is situated in the fields of political behavior, comparative politics and political sociology. My PhD project investigates the implications of shifting <strong>social status</strong> hierarchies for political attitudes and behavior, with a focus on shifts in cultural structural hierarchies like gender and race/ethnicity. The focus is on the connection between perceptions of status threat and <strong>radical right voting</strong> on the one hand and on perceptions of status gains and voting for socioculturally progressive parties on the other hand. Further, I am interested in the program and strategy of populist radical right parties and their effects on mainstream parties.</p>
