--- a/index.html
+++ b/index.html
@@ -80,8 +80,11 @@
 I am a political consultant, an academic, and a columnist. I contribute to two organizations that provide discrete, reliable solutions to investors, stakeholders and politicians worldwide: contact me personally for more information. I also regularly participate as a current affairs television, radio and newspaper commentator (see sidebar).</p>
 <hr>
 <h2 id="research-interests">Research Interests</h2>
-<p>My research is situated in the fields of political behavior, comparative politics and political sociology. My PhD project investigates the implications of shifting <strong>social status</strong> hierarchies for political attitudes and behavior, with a focus on shifts in cultural structural hierarchies like gender and race/ethnicity. The focus is on the connection between perceptions of status threat and <strong>radical right voting</strong> on the one hand and on perceptions of status gains and voting for socioculturally progressive parties on the other hand. Further, I am interested in the program and strategy of populist radical right parties and their effects on mainstream parties.</p>
-<p>I use quantitative methods such as survey experiments and text analysis. I am conducting my PhD research within an project funded by the Swiss National Science Foundation, led by Tarik Abou-Chadi.</p>
+<p>I received my PhD in political science from The London School of Economics in 2016. Since then, I have been an Assistant Professor at Universidad Central, and held visiting positions at Sapienza University and University of Milan. I am also a Researcher at Universidad Diego Portales. Here is my full [CV](https://www.dropbox.com/s/e1hjycqkmixr5x5/CV_Kenneth_Bunker.pdf?dl=0).
+
+My research has mainly focused on the interaction between electoral systems and party systems. The purpose of my PhD was to understand how and why parties form electoral and government coalitions in presidentialism. You can read an example of that work [here](https://doi.org/10.18042/cepc/rep.186.06).
+
+More recently, I have focused on electoral forecasting across the world. Among other things, I created an innovative method called the Two-Stage Model (TSM). You can read more about it [here](https://www.researchgate.net/publication/334836295_A_two-stage_model_to_forecast_elections_in_developing_democracies). The TSM has been tested in [new](https://www.researchgate.net/publication/334836295_A_two-stage_model_to_forecast_elections_in_developing_democracies) and [advanced democracies](https://www.researchgate.net/publication/336312679_Forecasting_elections_in_Italy).</p>
 <hr>
 <h2 id="contact">Contact</h2>
 <p>You can reach me via e-mail at: <a href="mailto:breyer@ipz.uzh.ch">breyer@ipz.uzh.ch</a></p>
