--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
     <body><div class="container mt-5">
     <nav class="navbar navbar-expand-sm flex-column flex-sm-row text-nowrap p-0">
-        <a class="navbar-brand mx-0 mr-sm-auto" href="https://www.magdalenabreyer.net">
+        <a class="navbar-brand mx-0 mr-sm-auto" href="https://kennethbunker.github.io">
           
-          Magdalena Breyer
+          Kenneth Bunker
         </a>
         <div class="navbar-nav flex-row flex-wrap justify-content-center">
             
