--- a/index.html
+++ b/index.html
@@ -80,9 +80,10 @@
 <h2 id="research-interests">About me</h2>
 <p>I received my PhD in political science from The London School of Economics in 2016. Since then, I have been an Assistant Professor at Universidad Central, and held visiting positions at Sapienza University and University of Milan. I am also a Researcher at Universidad Diego Portales.
 
-My research has mainly focused on the interaction between electoral systems and party systems. The purpose of my PhD was to understand how and why parties form electoral and government coalitions in presidentialism. <p>You can read an example of that work here <a href="https://doi.org/10.18042/cepc/rep.186.06">here/a></p>
+My research has mainly focused on the interaction between electoral systems and party systems. The purpose of my PhD was to understand how and why parties form electoral and government coalitions in presidentialism. <p>You can read an example of that work <a href="https://doi.org/10.18042/cepc/rep.186.06">here</a></p>
 
-More recently, I have focused on electoral forecasting across the world. Among other things, I created an innovative method called the Two-Stage Model (TSM). You can read more about it [here](https://www.researchgate.net/publication/334836295_A_two-stage_model_to_forecast_elections_in_developing_democracies). The TSM has been tested in [new](https://www.researchgate.net/publication/334836295_A_two-stage_model_to_forecast_elections_in_developing_democracies) and [advanced democracies](https://www.researchgate.net/publication/336312679_Forecasting_elections_in_Italy).</p>
+More recently, I have focused on electoral forecasting across the world. Among other things, I created an innovative method called the Two-Stage Model (TSM). <p>You can read more about it here <a href="https://www.researchgate.net/publication/334836295_A_two-stage_model_to_forecast_elections_in_developing_democracies">here</a></p>. The TSM has been tested in <a href="https://www.researchgate.net/publication/334836295_A_two-stage_model_to_forecast_elections_in_developing_democracies">new</a></p> and <a href="https://www.researchgate.net/publication/336312679_Forecasting_elections_in_Italy">established</a></p> democracies.
+
 <hr>
 <h2 id="contact">Contact</h2>
 <p>You can reach me via e-mail at: <a href="mailto:kbunker@politicotechglobal.com">kbunker@politicotechglobal.com</a></p>
@@ -94,7 +95,7 @@ More recently, I have focused on electoral forecasting across the world. Among o
     
         <hr>
         <div class="container text-center">
-            <a href="https://github.com/ojroques/hugo-researcher"><small>2023</small></a>
+            <a href="https://twitter.com/kennethbunker"><small>2023</small></a>
         </div>
     
 </div>
