--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
     <img src="https://kennethbunker.github.io/me.png"/> 
 </figure>
 
-<p> I am a political consultant, an academic, and a columnist. I contribute to two organizations that provide discrete, reliable solutions to investors, stakeholders and politicians worldwide: contact me personally for more information. I also regularly participate as a current affairs television, radio and newspaper commentator (see sidebar).</p>
+<p> I am a political consultant, an academic, and a columnist. I contribute to two organizations that provide discrete, reliable solutions to investors, stakeholders and politicians worldwide: contact me personally for more information. I also regularly participate as a current affairs television, radio and newspaper commentator </p>
 <hr>
 <h2 id="research-interests">About me</h2>
-<p>I received my PhD in political science from The London School of Economics in 2016. Since then, I have been an Assistant Professor at Universidad Central, and held visiting positions at Sapienza University and University of Milan. I am also a Researcher at Universidad Diego Portales.
-<hr>
+<p>I received my PhD in political science from The London School of Economics in 2016. Since then, I have been an Assistant Professor at Universidad Central, and held visiting positions at Sapienza University and University of Milan. I am also a Researcher at Universidad Diego Portales.</p>
+
 My research has mainly focused on the interaction between electoral systems and party systems. The purpose of my PhD was to understand how and why parties form electoral and government coalitions in presidentialism. <p>You can read an example of that work <a href="https://doi.org/10.18042/cepc/rep.186.06">here</a></p>
-<hr>
-More recently, I have focused on electoral forecasting across the world. Among other things, I created an innovative method called the Two-Stage Model (TSM). <p>You can read more about it here <a href="https://www.researchgate.net/publication/334836295_A_two-stage_model_to_forecast_elections_in_developing_democracies">here</a></p>. The TSM has been tested in <a href="https://www.researchgate.net/publication/334836295_A_two-stage_model_to_forecast_elections_in_developing_democracies">new</a></p> and <a href="https://www.researchgate.net/publication/336312679_Forecasting_elections_in_Italy">established</a></p> democracies.
+
+<p>More recently, I have focused on electoral forecasting across the world. Among other things, I created an innovative method called the Two-Stage Model (TSM). <p>You can read more about it here <a href="https://www.researchgate.net/publication/334836295_A_two-stage_model_to_forecast_elections_in_developing_democracies">here</a>. The TSM has been tested in <a href="https://www.researchgate.net/publication/334836295_A_two-stage_model_to_forecast_elections_in_developing_democracies">new</a> and <a href="https://www.researchgate.net/publication/336312679_Forecasting_elections_in_Italy">established</a> democracies.</p>
 
 <hr>
 <h2 id="contact">Contact</h2>
