--- a/contact/index.html
+++ b/contact/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-sm flex-column flex-sm-row text-nowrap p-0">
         <a class="navbar-brand mx-0 mr-sm-auto" href="https://kennethbunker.github.io">
           
-          Magdalena Breyer
+          Kenneth Bunker
         </a>
         <div class="navbar-nav flex-row flex-wrap justify-content-center">
             
