--- a/research/index2.html
+++ b/research/index2.html
@@ -69,6 +69,22 @@
 <div id="content">
 <div class="container">
     <h2 id="publications">Publications</h2>
+
+    ## Las Últimas Noticias
+
+[*Las Últimas Noticias*](https://www.lun.com)
+
+- 20230509 - Retribución moral
+- 20230508 - Victoria histórica
+- 20230506 - Legitimas dudas
+- 20230429 - La cultura de la funa
+- 20230422 - Soluciones a cuentagotas
+- 20230420 - Nuevo rumbo
+- 20230414 - Símbolo de retroceso
+- 20230407 - Fracaso absoluto
+- 20230330 - Más vale tarde
+
+
 <h3 id="peer-reviewed">Peer reviewed</h3>
 <p>Populist positions in party competition: Do parties strategically vary their degree of populism in reaction to vote and office loss? <em>Party Politics</em>, 2022, Online First (Open Access).
 DOI: <a href="https://journals.sagepub.com/doi/10.1177/13540688221097082">10.1177/13540688221097082</a>
