--- a/columns/index.html
+++ b/columns/index.html
@@ -586,20 +586,16 @@
 
 <h2 id="others-selected-english-">Others (selected, english)</h2>
 <ul>
-<li><p>20160520 - HuffPost. <a href="https://www.huffingtonpost.co.uk/kenneth-bunker/how-the-major-parties-wil_b_10044036.html">How the Major Parties Will Face the EU</a></p>
+<li>20160520 - HuffPost. <a href="https://www.huffingtonpost.co.uk/kenneth-bunker/how-the-major-parties-wil_b_10044036.html">How the Major Parties Will Face the EU</a>
 </li>
-<li><p>20160520 - HuffPost. <a href="https://www.huffingtonpost.co.uk/kenneth-bunker/ukip-snp-nationalist-parties_b_10001862.html">Bittersweet Showing for Nationalist Parties</a></p>
+<li>20160520 - HuffPost. <a href="https://www.huffingtonpost.co.uk/kenneth-bunker/ukip-snp-nationalist-parties_b_10001862.html">Bittersweet Showing for Nationalist Parties</a>
 </li>
-<li><p>20160505 - HuffPost. <a href="https://www.huffingtonpost.co.uk/kenneth-bunker/electoral-reform_b_9839520.html">Hope for Electoral Reform in the United Kingdom</a></p>
+<li>20160505 - HuffPost. <a href="https://www.huffingtonpost.co.uk/kenneth-bunker/electoral-reform_b_9839520.html">Hope for Electoral Reform in the United Kingdom</a>
 </li>
-<li><p>20131125 - Warscapes. <a href="http://www.warscapes.com/opinion/michelle-bachelet-s-legislative-majority">Michelle Bachelet&#39;s Legislative Majority</a></p>
+<li>20131125 - Warscapes. <a href="http://www.warscapes.com/opinion/michelle-bachelet-s-legislative-majority">Michelle Bachelet&#39;s Legislative Majority</a>
 </li>
 </ul>
 <hr>
-
-
-<p><a href="https://kennethbunker.github.io/"><img src="columns.png" alt="Columns over time">{:height=&quot;99%&quot; width=&quot;99%&quot;}</a></p>
-
 
 </div>
 
