--- a/columns/index.html
+++ b/columns/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Research</title>
+    <title>Columns</title>
     <meta name="description" content="PhD Candidate in Political Science, University of Zurich">
     <meta name="author" content='Magdalena Breyer'>
 
