--- a/columns/index.html
+++ b/columns/index.html
@@ -31,12 +31,20 @@
                         <span class="nav-item navbar-text mx-1">/</span>        
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/cv.pdf">
                         CV
-                    </a>          
+                    </a>
+                    <a class="nav-item nav-link" href="https://kennethbunker.github.io/press">
+                        Press
+                    </a>  
+                    <a class="nav-item nav-link" href="https://kennethbunker.github.io/prensa">
+                        Prensa
+                    </a>
+                    <a class="nav-item nav-link" href="https://kennethbunker.github.io/columns">
+                        Columns
+                    </a>              
                         <span class="nav-item navbar-text mx-1">/</span>
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/contact">
                         Contact
-                    </a>  
-                    
+                    </a>         
         </div>
     </nav>
 </div>
