--- a/prensa/index.html
+++ b/prensa/index.html
@@ -20,7 +20,7 @@
 
     <body><div class="container mt-5">
     <nav class="navbar navbar-expand-sm flex-column flex-sm-row text-nowrap p-0">
-        <a class="navbar-brand mx-0 mr-sm-auto" href="https://www.https://kennethbunker.github.io/">
+        <a class="navbar-brand mx-0 mr-sm-auto" href="https://kennethbunker.github.io/">
           
           Kenneth Bunker
         </a>
