--- a/press/index.html
+++ b/press/index.html
@@ -32,12 +32,15 @@
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/cv.pdf">
                         CV
                     </a>
+                        <span class="nav-item navbar-text mx-1">/</span>  
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/press">
                         Press
-                    </a>  
+                    </a>
+                        <span class="nav-item navbar-text mx-1">/</span>    
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/prensa">
                         Prensa
                     </a>
+                        <span class="nav-item navbar-text mx-1">/</span>  
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/columns">
                         Columns
                     </a>              
