--- a/index.html
+++ b/index.html
@@ -70,6 +70,59 @@ My research has mainly focused on the interaction between electoral systems and 
 
 <p>More recently, I have focused on electoral forecasting across the world. Among other things, I created an innovative method called the Two-Stage Model (TSM). You can read more about it here <a href="https://www.researchgate.net/publication/334836295_A_two-stage_model_to_forecast_elections_in_developing_democracies">here</a>. The TSM has been tested in <a href="https://www.researchgate.net/publication/334836295_A_two-stage_model_to_forecast_elections_in_developing_democracies">new</a> and <a href="https://www.researchgate.net/publication/336312679_Forecasting_elections_in_Italy">established</a> democracies.</p>
 
+
+<p><a href="https://kennethbunker.github.io/">Home</a> ┃ <a href="https://www.researchgate.net/profile/Kenneth-Bunker">Academia</a> ┃  <a href="https://publons.com/researcher/1861400/kenneth-bunker/">Publons</a> ┃ <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&amp;hl">Google Scholar</a> ┃ <a href="https://www.researchgate.net/profile/Kenneth-Bunker">ResearchGate</a> ┃ <a href="https://www.dropbox.com/s/e1hjycqkmixr5x5/CV_Kenneth_Bunker.pdf?dl=0">CV</a> ┃ <a href="https://orcid.org/0000-0002-4579-6132">Orcid</a> ┃ <a href="https://www.webofscience.com/wos/author/record/R-4439-2018">Web of Science</a> ┃ <a href="https://twitter.com/kennethbunker">Twitter</a> ┃ <a href="https://investigadores.anid.cl/es/public_search/researcher?id=8287">Anid</a> ┃ <a href="https://kennethbunker.github.io/columns">Columns</a> ┃ <a href="https://kennethbunker.github.io/press">Press (Global)</a> ┃ <a href="https://kennethbunker.github.io/prensa">Prensa (Chile)</a> ┃ <a href="https://kennethbunker.github.io/interviews">Interviews/Entrevistas</a> ┃ <a href="https://cl.linkedin.com/in/kennethbunker">LinkedIn</a> ┃ <a href="https://kennethbunker.github.io/covers">On the Front Page</a> ┃ <a href="https://tresquintos.cl">Tresquintos</a> ┃ <a href="https://twitter.com/cuatroseptimos">Cuatroseptimos</a> ┃ <a href="https://politicotechglobal.com">Politico Tech Global</a> ┃ <a href="mailto:kabunker@gmail.com">E-mail</a></p>
+<hr>
+<h2 id="hello-world-">Hello world!</h2>
+<p>I am a political consultant, an academic, and a columnist. I contribute to two organizations that provide discrete, reliable solutions to investors, stakeholders and politicians worldwide: contact me personally for more information. I also regularly participate as a current affairs television, radio and newspaper commentator (see sidebar).</p>
+<hr>
+<p>📍 <a href="https://kennethbunker.github.io/press"><strong>Click here to see a collection of my comments in the international press!</strong> (TIME, The Economist, The Guardian, BBC, Le Monde, Deutsche Welle, The Wall Street Journal, Forbes, El País, CNN, Bloomberg, Les Echoes, De Tijd, Nasdaq, Expansión, Il Giornale ...)</a>.📍</p>
+<hr>
+<p>I received my PhD in political science from The London School of Economics in 2016. Since then, I have been an Assistant Professor at Universidad Central, and held visiting positions at Sapienza University and University of Milan. I am also a Researcher at Universidad Diego Portales. Here is my full <a href="https://www.dropbox.com/s/e1hjycqkmixr5x5/CV_Kenneth_Bunker.pdf?dl=0">CV</a>.</p>
+<p>My research has mainly focused on the interaction between electoral systems and party systems. The purpose of my PhD was to understand how and why parties form electoral and government coalitions in presidentialism. You can read an example of that work <a href="https://doi.org/10.18042/cepc/rep.186.06">here</a>.</p>
+<p>More recently, I have focused on electoral forecasting across the world. Among other things, I created an innovative method called the Two-Stage Model (TSM). You can read more about it <a href="https://www.researchgate.net/publication/334836295_A_two-stage_model_to_forecast_elections_in_developing_democracies">here</a>. The TSM has been tested in <a href="https://www.researchgate.net/publication/334836295_A_two-stage_model_to_forecast_elections_in_developing_democracies">new</a> and <a href="https://www.researchgate.net/publication/336312679_Forecasting_elections_in_Italy">advanced democracies</a>.</p>
+<hr>
+<p>My forthcoming book (with Jorge Heine) is called:</p>
+<p>💎 <strong>The Chilean Road to a New Constitution: The End of Neoliberalism? (Routledge)</strong></p>
+<hr>
+<p>You can find a short list of my most recent publications below:</p>
+<ul>
+<li><p>2022. “Forecasting two-horse races in new democracies: Accuracy, precision and error” <em>Revista Lationamericana de Opinión Pública</em>. (Forthcoming). <a href="https://doi.org/10.14201/rlop.25374">doi</a></p>
+</li>
+<li><p>2021. “Coalitional presidentialism in comparative perspective: Minority presidents in multiparty systems, by Paul Chaisty, Nic Cheeseman, and Timothy J. Power.” <em>Party Politics</em>. <a href="https://doi.org/10.1177/1354068820984270">doi</a>.</p>
+</li>
+<li><p>2021. “The age cleavage: Cultural backlash in Chile” <em>América Latina Hoy</em> 87: 1-26. <a href="https://doi.org/10.14201/alh">doi</a>.</p>
+</li>
+<li><p>2021. “A two-stage model to forecast elections in new democracies” <em>International Journal of Forecasting</em> 36(4): 1407-1419. <a href="https://doi.org/10.1016/j.ijforecast.2020.02.004">doi</a>.</p>
+</li>
+<li><p>2019. “Why do parties cooperate in presidentialism? Electoral and government coalition formation in Latin America.” <em>Revista de Estudios Políticos</em> 186(4): 171-199. <a href="https://doi.org/10.18042/cepc/rep.186.06">doi</a>.</p>
+</li>
+<li><p>2019. “Cultural Backlash: Trump, Brexit, and authoritarian populism, by Pippa Norris and Ronald Inglehart.” <em>Democratization</em> 26(7): 1323-1325. <a href="https://doi.org/%2010.1080/13510347.2019.1601705">doi</a>.</p>
+</li>
+<li><p>2019. “Voter Equalization and Turnout Bias After Electoral Reform: Evidence from Chile’s Voluntary Voting Law.” <em>Latin American Politics and Society</em> 61(4): 23-46. <a href="https://doi.org/10.1017/lap.2019.23">doi</a>. (with Daniel Brieba).</p>
+</li>
+<li><p>2019. “Richard Nadeau, Éric Bélanger, Michael S. Lewis-Beck, Mathieu Turgeon and François Gélineau, Latin American Elections: Choice and Change.” <em>Journal of Latin American Studies</em> 51(3): 721-723. <a href="https://doi.org/10.1017/S0022216X19000798">doi</a>.</p>
+</li>
+<li><p>2019. “Party Systems in Latin America: Institutionalization, Decay, and Collapse, by Scott Mainwaring (Eds.).” <em>Democratization</em> 26(3): 554-555. <a href="https://doi.org/10.1007/s11127-018-0613-6">doi</a>.</p>
+</li>
+<li><p>2019. “Matthew S. Shugart and Rein Taagepera: Votes from seats: Logical models of electoral systems.” <em>Public Choice</em> 178(1-2): 311-313. <a href="https://doi.org/10.1080/13510347.2018.1536123">doi</a>.</p>
+</li>
+<li><p>2018. “The 2017 Elections and the Fragmentation of the Party System in Chile.” <em>Revista Chilena de Derecho y Ciencia Política</em> 9(2): 204-229. <a href="http://10.0.30.90/RCHDYCP-V9N2-ART1823">doi</a>.</p>
+</li>
+</ul>
+<p>Here are some working papers (please contact me for citation instructions):</p>
+<ul>
+<li><a href="https://preprints.apsanet.org/engage/api-gateway/apsa/assets/orp/resource/item/5ec630f0bd035400191def57/original/how-electoral-designers-fail-the-contextual-straightjackets-of-reform.pdf">APSA Preprints</a>. How electoral designers fail: The contextual straightjackets of reform.</li>
+</ul>
+<hr>
+<p>Outside academia, I am a columnist for Chilean daily newspaper <a href="http://www.lun.com/">Las Últimas Noticias</a> and online website <a href="http://www.ex-ante.cl/">Ex-Ante</a>, Executive Director of consultancy group <a href="http://www.tresquintos.cl/">Tresquintos</a>, and co-creator of online election game <a href="http://www.twitter.com/electoraldeathm">#ElectoralDeathMatch</a>. You can also follow me on <a href="http://www.twitter.com/kennethbunker">Twitter</a>!</p>
+<hr>
+<h2 id="links">Links</h2>
+<p><a href="https://kennethbunker.github.io/">Home</a> ┃ <a href="https://www.researchgate.net/profile/Kenneth-Bunker">Academia</a> ┃  <a href="https://publons.com/researcher/1861400/kenneth-bunker/">Publons</a> ┃ <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&amp;hl">Google Scholar</a> ┃ <a href="https://www.researchgate.net/profile/Kenneth-Bunker">ResearchGate</a> ┃ <a href="https://www.dropbox.com/s/e1hjycqkmixr5x5/CV_Kenneth_Bunker.pdf?dl=0">CV</a> ┃ <a href="https://orcid.org/0000-0002-4579-6132">Orcid</a> ┃ <a href="https://twitter.com/kennethbunker">Twitter</a> ┃ <a href="https://kennethbunker.github.io/columns">Columns</a> ┃ <a href="https://kennethbunker.github.io/press">Press (Global)</a> ┃ <a href="https://kennethbunker.github.io/prensa">Prensa (Chile)</a> ┃ <a href="https://cl.linkedin.com/in/kennethbunker">LinkedIn</a> ┃ <a href="https://kennethbunker.github.io/covers">Front Page</a> ┃ <a href="https://tresquintos.cl">Tresquintos</a> ┃ <a href="https://politicotechglobal.com">Politico Tech Global</a> ┃ <a href="mailto:kabunker@gmail.com">E-mail</a></p>
+<hr>
+
+
+
 <hr>
 <h2 id="contact">Contact</h2>
 <p>You can reach me via e-mail at: <a href="mailto:kbunker@politicotechglobal.com">kbunker@politicotechglobal.com</a></p>
