--- a/index.html
+++ b/index.html
@@ -77,24 +77,24 @@
 
 <p>2021. “Coalitional presidentialism in comparative perspective: Minority presidents in multiparty systems, by Paul Chaisty, Nic Cheeseman, and Timothy J. Power.” <em>Party Politics</em>. <a href="https://doi.org/10.1177/1354068820984270">doi</a>.</p>
 
-<li><p>2021. “The age cleavage: Cultural backlash in Chile” <em>América Latina Hoy</em> 87: 1-26. <a href="https://doi.org/10.14201/alh">doi</a>.</p>
-</li>
-<li><p>2021. “A two-stage model to forecast elections in new democracies” <em>International Journal of Forecasting</em> 36(4): 1407-1419. <a href="https://doi.org/10.1016/j.ijforecast.2020.02.004">doi</a>.</p>
-</li>
-<li><p>2019. “Why do parties cooperate in presidentialism? Electoral and government coalition formation in Latin America.” <em>Revista de Estudios Políticos</em> 186(4): 171-199. <a href="https://doi.org/10.18042/cepc/rep.186.06">doi</a>.</p>
-</li>
-<li><p>2019. “Cultural Backlash: Trump, Brexit, and authoritarian populism, by Pippa Norris and Ronald Inglehart.” <em>Democratization</em> 26(7): 1323-1325. <a href="https://doi.org/%2010.1080/13510347.2019.1601705">doi</a>.</p>
-</li>
-<li><p>2019. “Voter Equalization and Turnout Bias After Electoral Reform: Evidence from Chile’s Voluntary Voting Law.” <em>Latin American Politics and Society</em> 61(4): 23-46. <a href="https://doi.org/10.1017/lap.2019.23">doi</a>. (with Daniel Brieba).</p>
-</li>
-<li><p>2019. “Richard Nadeau, Éric Bélanger, Michael S. Lewis-Beck, Mathieu Turgeon and François Gélineau, Latin American Elections: Choice and Change.” <em>Journal of Latin American Studies</em> 51(3): 721-723. <a href="https://doi.org/10.1017/S0022216X19000798">doi</a>.</p>
-</li>
-<li><p>2019. “Party Systems in Latin America: Institutionalization, Decay, and Collapse, by Scott Mainwaring (Eds.).” <em>Democratization</em> 26(3): 554-555. <a href="https://doi.org/10.1007/s11127-018-0613-6">doi</a>.</p>
-</li>
-<li><p>2019. “Matthew S. Shugart and Rein Taagepera: Votes from seats: Logical models of electoral systems.” <em>Public Choice</em> 178(1-2): 311-313. <a href="https://doi.org/10.1080/13510347.2018.1536123">doi</a>.</p>
-</li>
-<li><p>2018. “The 2017 Elections and the Fragmentation of the Party System in Chile.” <em>Revista Chilena de Derecho y Ciencia Política</em> 9(2): 204-229. <a href="http://10.0.30.90/RCHDYCP-V9N2-ART1823">doi</a>.</p>
-</li>
+<p>2021. “The age cleavage: Cultural backlash in Chile” <em>América Latina Hoy</em> 87: 1-26. <a href="https://doi.org/10.14201/alh">doi</a>.</p>
+
+<p>2021. “A two-stage model to forecast elections in new democracies” <em>International Journal of Forecasting</em> 36(4): 1407-1419. <a href="https://doi.org/10.1016/j.ijforecast.2020.02.004">doi</a>.</p>
+
+<p>2019. “Why do parties cooperate in presidentialism? Electoral and government coalition formation in Latin America.” <em>Revista de Estudios Políticos</em> 186(4): 171-199. <a href="https://doi.org/10.18042/cepc/rep.186.06">doi</a>.</p>
+
+<p>2019. “Cultural Backlash: Trump, Brexit, and authoritarian populism, by Pippa Norris and Ronald Inglehart.” <em>Democratization</em> 26(7): 1323-1325. <a href="https://doi.org/%2010.1080/13510347.2019.1601705">doi</a>.</p>
+
+<p>2019. “Voter Equalization and Turnout Bias After Electoral Reform: Evidence from Chile’s Voluntary Voting Law.” <em>Latin American Politics and Society</em> 61(4): 23-46. <a href="https://doi.org/10.1017/lap.2019.23">doi</a>. (with Daniel Brieba).</p>
+
+<p>2019. “Richard Nadeau, Éric Bélanger, Michael S. Lewis-Beck, Mathieu Turgeon and François Gélineau, Latin American Elections: Choice and Change.” <em>Journal of Latin American Studies</em> 51(3): 721-723. <a href="https://doi.org/10.1017/S0022216X19000798">doi</a>.</p>
+
+<p>2019. “Party Systems in Latin America: Institutionalization, Decay, and Collapse, by Scott Mainwaring (Eds.).” <em>Democratization</em> 26(3): 554-555. <a href="https://doi.org/10.1007/s11127-018-0613-6">doi</a>.</p>
+
+<p>2019. “Matthew S. Shugart and Rein Taagepera: Votes from seats: Logical models of electoral systems.” <em>Public Choice</em> 178(1-2): 311-313. <a href="https://doi.org/10.1080/13510347.2018.1536123">doi</a>.</p>
+
+<p>2018. “The 2017 Elections and the Fragmentation of the Party System in Chile.” <em>Revista Chilena de Derecho y Ciencia Política</em> 9(2): 204-229. <a href="http://10.0.30.90/RCHDYCP-V9N2-ART1823">doi</a>.</p>
+
 </ul>
 <p>Here are some working papers (please contact me for citation instructions):</p>
 <ul>
@@ -104,12 +104,9 @@
 <p>Outside academia, I am a columnist for Chilean daily newspaper <a href="http://www.lun.com/">Las Últimas Noticias</a> and online website <a href="http://www.ex-ante.cl/">Ex-Ante</a>, Executive Director of consultancy group <a href="http://www.tresquintos.cl/">Tresquintos</a>, and co-creator of online election game <a href="http://www.twitter.com/electoraldeathm">#ElectoralDeathMatch</a>. You can also follow me on <a href="http://www.twitter.com/kennethbunker">Twitter</a>!</p>
 <hr>
 <h2 id="links">Links</h2>
-<p><a href="https://kennethbunker.github.io/">Home</a> / <a href="https://www.researchgate.net/profile/Kenneth-Bunker">Academia</a> /   <a href="https://publons.com/researcher/1861400/kenneth-bunker/">Publons</a> /  <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&amp;hl">Google Scholar</a> ┃ <a href="https://www.researchgate.net/profile/Kenneth-Bunker">ResearchGate</a> /  <a href="https://www.dropbox.com/s/e1hjycqkmixr5x5/CV_Kenneth_Bunker.pdf?dl=0">CV</a> /  <a href="https://orcid.org/0000-0002-4579-6132">Orcid</a> /  <a href="https://twitter.com/kennethbunker">Twitter</a> /  <a href="https://kennethbunker.github.io/columns">Columns</a> /  <a href="https://kennethbunker.github.io/press">Press (Global)</a> /  <a href="https://kennethbunker.github.io/prensa">Prensa (Chile)</a> /  <a href="https://cl.linkedin.com/in/kennethbunker">LinkedIn</a> /  <a href="https://kennethbunker.github.io/covers">Front Page</a> /  <a href="https://tresquintos.cl">Tresquintos</a> /  <a href="https://politicotechglobal.com">Politico Tech Global</a> /  <a href="mailto:kabunker@gmail.com">E-mail</a></p>
+<p><a href="https://kennethbunker.github.io/">Home</a> / <a href="https://www.researchgate.net/profile/Kenneth-Bunker">Academia</a> /   <a href="https://publons.com/researcher/1861400/kenneth-bunker/">Publons</a> /  <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&amp;hl">Google Scholar</a> / <a href="https://www.researchgate.net/profile/Kenneth-Bunker">ResearchGate</a> /  <a href="https://www.dropbox.com/s/e1hjycqkmixr5x5/CV_Kenneth_Bunker.pdf?dl=0">CV</a> /  <a href="https://orcid.org/0000-0002-4579-6132">Orcid</a> /  <a href="https://twitter.com/kennethbunker">Twitter</a> /  <a href="https://kennethbunker.github.io/columns">Columns</a> /  <a href="https://kennethbunker.github.io/press">Press (Global)</a> /  <a href="https://kennethbunker.github.io/prensa">Prensa (Chile)</a> /  <a href="https://cl.linkedin.com/in/kennethbunker">LinkedIn</a> /  <a href="https://kennethbunker.github.io/covers">Front Page</a> /  <a href="https://tresquintos.cl">Tresquintos</a> /  <a href="https://politicotechglobal.com">Politico Tech Global</a> /  <a href="mailto:kabunker@gmail.com">E-mail</a></p>
 <hr>
 
-
-
-<hr>
 <h2 id="contact">Contact</h2>
 <p>You can reach me via e-mail at: <a href="mailto:kbunker@politicotechglobal.com">kbunker@politicotechglobal.com</a></p>
 <hr>
