--- a/contact/index.html
+++ b/contact/index.html
@@ -64,8 +64,23 @@
 <p>Chile</p>
 </blockquote>
 <hr>
-<h2 id="social">Social</h2>
+<h2 id="social">Links</h2>
 <p><a href="https://twitter.com/kennethbunker">Twitter</a></p>
+<p><a href="https://kennethbunker.github.io/">Home</a>
+    <a href="https://www.researchgate.net/profile/Kenneth-Bunker">Academia</a>
+    <a href="https://publons.com/researcher/1861400/kenneth-bunker/">Publons</a>
+    <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&amp;hl">Google Scholar</a>
+    <a href="https://www.researchgate.net/profile/Kenneth-Bunker">ResearchGate</a>
+    <a href="https://www.dropbox.com/s/e1hjycqkmixr5x5/CV_Kenneth_Bunker.pdf?dl=0">CV</a>
+    <a href="https://orcid.org/0000-0002-4579-6132">Orcid</a> ┃ <a href="https://twitter.com/kennethbunker">Twitter</a>
+    <a href="https://kennethbunker.github.io/columns">Columns</a>
+    <a href="https://kennethbunker.github.io/press">Press (Global)</a>
+    <a href="https://kennethbunker.github.io/prensa">Prensa (Chile)</a>
+    <a href="https://cl.linkedin.com/in/kennethbunker">LinkedIn</a>
+    <a href="https://kennethbunker.github.io/covers">Front Page</a> 
+    <a href="https://tresquintos.cl">Tresquintos</a>
+    <a href="https://politicotechglobal.com">Politico Tech Global</a>
+    <a href="mailto:kbunker@politicotechglobal.com">E-mail</a></p>
 
 </div>
 
@@ -75,6 +90,7 @@
         <div class="container text-center">
             <a href="https://twitter.com/kennethbunker"><small>2023</small></a>
         </div>
+
     
 </div>
 </body>
