--- a/covers/index.html
+++ b/covers/index.html
@@ -60,8 +60,12 @@
 <hr>
 <p><em>For a collection of my comments in the international press, click <a href="https://kennethbunker.github.io/press">here</a>. For a collection of my comments in the Chilean press, click <a href="https://kennethbunker.github.io/prensa">here</a>.</em></p>
 <hr>
+
 <p><a href="/img/20210719%20-%20LUN.png"><img src="/img/20210719%20-%20LUN.png" alt="Las Últimas Noticias">{:height=&quot;32%&quot; width=&quot;32%&quot;}</a> <a href="/img/20211122%20-%20LUN.png"><img src="/img/20211122%20-%20LUN.png" alt="Las Últimas Noticias">{:height=&quot;32%&quot; width=&quot;32%&quot;}</a> <a href="/img/20211220%20-%20LUN.png"><img src="/img/20211220%20-%20LUN.png" alt="Las Últimas Noticias">{:height=&quot;32%&quot; width=&quot;32%&quot;}</a></p>
-<p><a href="/img/20220905%20-%20LUN.png"><img src="/img/20220905%20-%20LUN.png" alt="Las Últimas Noticias">{:height=&quot;32%&quot; width=&quot;32%&quot;}</a></p>
+
+<p><a href="/img/20220905%20-%20LUN.png"><img src="/img/20220905%20-%20LUN.png" alt="Las Últimas Noticias" width="400" height="500" /></a></p>
+
+
 <p><a href="/img/20211212%20-%20AustralValdivia.png"><img src="/img/20211212%20-%20AustralValdivia.png" alt="Austral de Valdivia">{:height=&quot;32%&quot; width=&quot;32%&quot;}</a> <a href="/img/20211212%20-%20El_Llanquihue.png"><img src="/img/20211212%20-%20El_Llanquihue.png" alt="El Llanquihue">{:height=&quot;32%&quot; width=&quot;32%&quot;}</a> <a href="/img/20211212%20-%20MercurioCalama.png"><img src="/img/20211212%20-%20MercurioCalama.png" alt="Mercurio Calama">{:height=&quot;32%&quot; width=&quot;32%&quot;}</a></p>
 <p><a href="/img/20211212%20-%20MercurioValpo.png"><img src="/img/20211212%20-%20MercurioValpo.png" alt="Mercurio Valparaíso">{:height=&quot;32%&quot; width=&quot;32%&quot;}</a> <a href="/img/20210411%20-%20MercurioValpo.png"><img src="/img/20210411%20-%20MercurioValpo.png" alt="Mercurio Valparaíso">{:height=&quot;32%&quot; width=&quot;32%&quot;}</a></p>
 <p><a href="/img/20211212%20-%20AustralOsorno.png"><img src="/img/20211212%20-%20AustralOsorno.png" alt="Austral Osorno">{:height=&quot;32%&quot; width=&quot;32%&quot;}</a> <a href="/img/20210411%20-%20AustralOsorno.png"><img src="/img/20210411%20-%20AustralOsorno.png" alt="Austral Osorno">{:height=&quot;32%&quot; width=&quot;32%&quot;}</a></p>
