--- a/contact/contact.html
+++ b/contact/contact.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html><head>
-    <meta charset="utf-8">
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XHPPDNKH57"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XHPPDNKH57');
+</script>
+   <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>Contact</title>
