--- a/covers/index.html
+++ b/covers/index.html
@@ -71,7 +71,7 @@
 <p><em>For a collection of my comments in the international press, click <a href="https://kennethbunker.github.io/press">here</a>. For a collection of my comments in the Chilean press, click <a href="https://kennethbunker.github.io/prensa">here</a>.</em></p>
 <hr>
 
-<p><a href="/img/20210719%20-%20LUN.png"><img src="/img/20210719%20-%20LUN.png" alt="Las Últimas Noticias" width="100" height="150" /></a> <a href="/img/20211122%20-%20LUN.png"><img src="/img/20211122%20-%20LUN.png" alt="Las Últimas Noticias" width="100" height="150" /></a> <a href="/img/20211220%20-%20LUN.png"><img src="/img/20211220%20-%20LUN.png" alt="Las Últimas Noticias" width="100" height="150" /></a></p>
+<a href="/img/20210719%20-%20LUN.png"><img src="/img/20210719%20-%20LUN.png" alt="Las Últimas Noticias" width="100" height="150" /></a> <a href="/img/20211122%20-%20LUN.png"><img src="/img/20211122%20-%20LUN.png" alt="Las Últimas Noticias" width="100" height="150" /></a> <a href="/img/20211220%20-%20LUN.png"><img src="/img/20211220%20-%20LUN.png" alt="Las Últimas Noticias" width="100" height="150" /></a>
 
 <p><a href="/img/20220905%20-%20LUN.png"><img src="/img/20220905%20-%20LUN.png" alt="Las Últimas Noticias" width="100" height="150" /></a></p>
 
