--- a/covers/index.html
+++ b/covers/index.html
@@ -72,6 +72,30 @@
 <hr>
 
 
+<h1>Place Images Side by Side using CSS Flex</h1>
+
+<div class="parent">
+
+<div>
+
+<img src="/img/20210719%20-%20LUN.png">
+
+</div>
+
+<div>
+
+<img src="/img/20210719%20-%20LUN.png">
+
+</div>
+
+<div>
+
+<img src="/img/20210719%20-%20LUN.png">
+
+</div>
+
+</div>
+
 <a href="/img/20210719%20-%20LUN.png"><img src="/img/20210719%20-%20LUN.png" alt="Las Últimas Noticias" width="100" height="150" /></a> <a href="/img/20211122%20-%20LUN.png"><img src="/img/20211122%20-%20LUN.png" alt="Las Últimas Noticias" width="100" height="150" /></a> <a href="/img/20211220%20-%20LUN.png"><img src="/img/20211220%20-%20LUN.png" alt="Las Últimas Noticias" width="100" height="150" /></a>
 
 <p><a href="/img/20220905%20-%20LUN.png"><img src="/img/20220905%20-%20LUN.png" alt="Las Últimas Noticias" width="100" height="150" /></a></p>
