--- a/covers/index.html
+++ b/covers/index.html
@@ -14,8 +14,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>Press</title>
-    <meta name="description" content="PhD Candidate in Political Science, University of Zurich">
-    <meta name="author" content='Magdalena Breyer'>
+    <meta name="description" content="Academic, Consultant, Columnist">
+    <meta name="author" content='Kenneth Bunker'>
 
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -76,31 +76,24 @@ gap: 5px;
 <hr>
 
 
-<h1>Place Images Side by Side using CSS Flex</h1>
-
 <div class="parent">
-
 <div>
-
-<img src="/img/20210719%20-%20LUN.png">
-
+<img src="img/20210719%20-%20LUN.png">
 </div>
-
 <div>
-
-<img src="/img/20210719%20-%20LUN.png">
-
+<img src="/img/20211122%20-%20LUN.png">
 </div>
-
 <div>
-
-<img src="/img/20210719%20-%20LUN.png">
-
+<img src="/img/20211220%20-%20LUN.png">
+</div>
 </div>
 
-</div>
 
-<a href="/img/20210719%20-%20LUN.png"><img src="/img/20210719%20-%20LUN.png" alt="Las Últimas Noticias" width="100" height="150" /></a> <a href="/img/20211122%20-%20LUN.png"><img src="/img/20211122%20-%20LUN.png" alt="Las Últimas Noticias" width="100" height="150" /></a> <a href="/img/20211220%20-%20LUN.png"><img src="/img/20211220%20-%20LUN.png" alt="Las Últimas Noticias" width="100" height="150" /></a>
+
+
+<a href="/img/20210719%20-%20LUN.png"><img src="/img/20210719%20-%20LUN.png" alt="Las Últimas Noticias" width="100" height="150" /></a> 
+<a href="/img/20211122%20-%20LUN.png"><img src="/img/20211122%20-%20LUN.png" alt="Las Últimas Noticias" width="100" height="150" /></a> 
+<a href="/img/20211220%20-%20LUN.png"><img src="/img/20211220%20-%20LUN.png" alt="Las Últimas Noticias" width="100" height="150" /></a>
 
 <p><a href="/img/20220905%20-%20LUN.png"><img src="/img/20220905%20-%20LUN.png" alt="Las Últimas Noticias" width="100" height="150" /></a></p>
 
