--- a/covers/index.html
+++ b/covers/index.html
@@ -78,7 +78,7 @@ gap: 5px;
 
 <div class="parent">
 <div>
-<img src="img/20210719%20-%20LUN.png">
+<img src="/img/20210719%20-%20LUN.png">
 </div>
 <div>
 <img src="/img/20211122%20-%20LUN.png">
