--- a/covers/index.html
+++ b/covers/index.html
@@ -88,14 +88,10 @@ gap: 5px;
 </div>
 </div>
 
-
-
-
-<a href="/img/20210719%20-%20LUN.png"><img src="/img/20210719%20-%20LUN.png" alt="Las Últimas Noticias" width="100" height="150" /></a> 
-<a href="/img/20211122%20-%20LUN.png"><img src="/img/20211122%20-%20LUN.png" alt="Las Últimas Noticias" width="100" height="150" /></a> 
-<a href="/img/20211220%20-%20LUN.png"><img src="/img/20211220%20-%20LUN.png" alt="Las Últimas Noticias" width="100" height="150" /></a>
-
-<p><a href="/img/20220905%20-%20LUN.png"><img src="/img/20220905%20-%20LUN.png" alt="Las Últimas Noticias" width="100" height="150" /></a></p>
+<div class="parent">
+<div>
+<img src="/img/20220905%20-%20LUN.png">
+</div>
 
 
 <p><a href="/img/20211212%20-%20AustralValdivia.png"><img src="/img/20211212%20-%20AustralValdivia.png" alt="Austral de Valdivia" width="100" height="150" /></a> <a href="/img/20211212%20-%20El_Llanquihue.png"><img src="/img/20211212%20-%20El_Llanquihue.png" alt="El Llanquihue" width="100" height="150" /></a> <a href="/img/20211212%20-%20MercurioCalama.png"><img src="/img/20211212%20-%20MercurioCalama.png" alt="Mercurio Calama" width="100" height="150" /></a></p>
