--- a/covers/index.html
+++ b/covers/index.html
@@ -94,29 +94,55 @@ gap: 5px;
 </div>
 
 
-<p><a href="/img/20211212%20-%20AustralValdivia.png"><img src="/img/20211212%20-%20AustralValdivia.png" alt="Austral de Valdivia" width="100" height="150" /></a> <a href="/img/20211212%20-%20El_Llanquihue.png"><img src="/img/20211212%20-%20El_Llanquihue.png" alt="El Llanquihue" width="100" height="150" /></a> <a href="/img/20211212%20-%20MercurioCalama.png"><img src="/img/20211212%20-%20MercurioCalama.png" alt="Mercurio Calama" width="100" height="150" /></a></p>
+<div class="parent">
+<div>
+    <img src="/img/20211212%20-%20AustralValdivia.png"> 
+    <img src="/img/20211212%20-%20El_Llanquihue.png"> 
+    <img src="/img/20211212%20-%20MercurioCalama.png">
+</div>
+
+
 <p><a href="/img/20211212%20-%20MercurioValpo.png"><img src="/img/20211212%20-%20MercurioValpo.png" alt="Mercurio Valparaíso" width="100" height="150" /></a> <a href="/img/20210411%20-%20MercurioValpo.png"><img src="/img/20210411%20-%20MercurioValpo.png" alt="Mercurio Valparaíso" width="100" height="150" /></a></p>
+
 <p><a href="/img/20211212%20-%20AustralOsorno.png"><img src="/img/20211212%20-%20AustralOsorno.png" alt="Austral Osorno" width="100" height="150" /></a> <a href="/img/20210411%20-%20AustralOsorno.png"><img src="/img/20210411%20-%20AustralOsorno.png" alt="Austral Osorno" width="100" height="150" /></a></p>
 <p><a href="/img/20210720%20-%20LUN.png"><img src="/img/20210720%20-%20LUN.png" alt="Las Últimas Noticias" width="100" height="150" /></a></p>
+
 <p><a href="/img/20230504%20-%20La%20Segunda.png"><img src="/img/20230504%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20230508%20-%20La%20Segunda.png"><img src="/img/20230508%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a></p>
+
 <p><a href="/img/20230413%20-%20La%20Segunda.png"><img src="/img/20230413%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20230410%20-%20La%20Segunda.png"><img src="/img/20230410%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20230420%20-%20La%20Segunda.png"><img src="/img/20230420%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a></p>
+
 <p><a href="/img/20230313%20-%20La%20Segunda.png"><img src="/img/20230313%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20230223%20-%20La%20Segunda.png"><img src="/img/20230223%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20230207%20-%20La%20Segunda.png"><img src="/img/20230207%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a></p>
+
 <p><a href="/img/20221226%20-%20La%20Segunda.png"><img src="/img/20221226%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20221220%20-%20La%20Segunda.png"><img src="/img/20221220%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20220811%20-%20La%20Segunda.png"><img src="/img/20220811%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a></p>
+
 <p><a href="/img/20220722%20-%20La%20Segunda.png"><img src="/img/20220722%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20220719%20-%20La%20Segunda.png"><img src="/img/20220719%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a>
 <a href="/img/20210419%20-%20La%20Segunda.png"><img src="/img/20210419%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a></p>
+
 <p><a href="/img/20220711%20-%20La%20Segunda.png"><img src="/img/20220711%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20220418%20-%20La%20Segunda.png"><img src="/img/20220418%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20220618%20-%20La%20Segunda.png"><img src="/img/20220618%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a></p>
+
 <p><a href="/img/20220411%20-%20La%20Segunda.png"><img src="/img/20220411%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20220406%20-%20La%20Segunda.png"><img src="/img/20220406%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20211213%20-%20La%20Segunda.png"><img src="/img/20211213%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a></p>
+
 <p><a href="/img/20211130%20-%20La%20Segunda.png"><img src="/img/20211130%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20211124%20-%20La%20Segunda.png"><img src="/img/20211124%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20210719%20-%20La%20Segunda.png"><img src="/img/20210719%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a></p>
+
 <p><a href="/img/20210806%20-%20La%20Segunda.png"><img src="/img/20210806%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20211019%20-%20La%20Segunda.png"><img src="/img/20211019%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20211004%20-%20La%20Segunda.png"><img src="/img/20211004%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a></p>
+
 <p><a href="/img/20210909%20-%20La%20Segunda.png"><img src="/img/20210909%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20210824%20-%20La%20Segunda.png"><img src="/img/20210824%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20210922%20-%20La%20Segunda.png"><img src="/img/20210922%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a></p>
+
 <p><a href="/img/20210924%20-%20La%20Segunda.png"><img src="/img/20210924%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20210927%20-%20La%20Segunda.png"><img src="/img/20210927%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20210905%20-%20La%20Segunda.png"><img src="/img/20210905%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a></p>
+
 <p><a href="/img/20210301%20-%20La%20Segunda.png"><img src="/img/20210301%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20211203%20-%20La%20Segunda.png"><img src="/img/20211203%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20210427%20-%20La%20Segunda.png"><img src="/img/20210427%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a></p>
+
 <p><a href="/img/20200323%20-%20La%20Segunda.png"><img src="/img/20200323%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> </p>
 <p><a href="/img/20210808%20-%20MercurioValpo.png"><img src="/img/20210808%20-%20MercurioValpo.png" alt="El Mercurio Valparaíso" width="100" height="150" /></a></p>
+
 <p><a href="/img/20230208%20-%20El%%20Mercurio.png"><img src="/img/20230208%20-%20El%20Mercurio.png" alt="El Mercurio" width="100" height="150" /></a> <a href="/img/20210225%20-%20El%20Mercurio.png"><img src="/img/20210225%20-%20El%20Mercurio.png" alt="El Mercurio" width="100" height="150" /></a> </p>
+
 <p><a href="/img/20210411%20-%20El_Sur.png"><img src="/img/20210411%20-%20El_Sur.png" alt="El Sur" width="100" height="150" /></a></p>
+
 <p><a href="https://kennethbunker.github.io/img/20160522%20-%20El_Centro.png"><img src="/img/20160522%20-%20El_Centro.png" alt="El Centro" width="100" height="150" /></a></p>
+
 <p><a href="/img/20210411%20-%20Estrella_Iquique.png"><img src="/img/20210411%20-%20Estrella_Iquique.png" alt="Estrella de Iquique" width="100" height="150" /></a></p>
+
 <p><a href="/img/20211215%20-%20La_Discusion.png"><img src="/img/20211215%20-%20La_Discusion.png" alt="La Discusión de Chillán" width="100" height="150" /></a></p>
 
 
