--- a/covers/index.html
+++ b/covers/index.html
@@ -97,7 +97,11 @@ gap: 5px;
 <div class="parent">
 <div>
     <img src="/img/20211212%20-%20AustralValdivia.png"> 
+  </div>
+  <div>
     <img src="/img/20211212%20-%20El_Llanquihue.png"> 
+  </div>
+  <div>
     <img src="/img/20211212%20-%20MercurioCalama.png">
 </div>
 
