--- a/covers/index.html
+++ b/covers/index.html
@@ -92,7 +92,7 @@ gap: 5px;
 <div>
 <img src="/img/20220905%20-%20LUN.png">
 </div>
-
+</div>
 
 <div class="parent">
 <div>
@@ -103,6 +103,7 @@ gap: 5px;
   </div>
   <div>
     <img src="/img/20211212%20-%20MercurioCalama.png">
+</div>
 </div>
 
 
