--- a/covers/index.html
+++ b/covers/index.html
@@ -92,6 +92,12 @@ gap: 5px;
 <div>
 <img src="/img/20220905%20-%20LUN.png">
 </div>
+<div>
+<img src="/img/20220905%20-%20LUN.png">
+</div>
+<div>
+<img src="/img/20220905%20-%20LUN.png">
+</div>
 </div>
 
 <div class="parent">
