--- a/covers/index.html
+++ b/covers/index.html
@@ -78,25 +78,25 @@ gap: 5px;
 
 <div class="parent">
 <div>
-<img src="/img/20210719%20-%20LUN.png">
+    <img src="/img/20210719%20-%20LUN.png">
 </div>
 <div>
-<img src="/img/20211122%20-%20LUN.png">
+    <img src="/img/20211122%20-%20LUN.png">
 </div>
 <div>
-<img src="/img/20211220%20-%20LUN.png">
+    <img src="/img/20211220%20-%20LUN.png">
 </div>
 </div>
 
 <div class="parent">
 <div>
-<img src="/img/20220905%20-%20LUN.png">
+    <img src="/img/20220905%20-%20LUN.png">
 </div>
 <div>
-<img src="/img/20220905%20-%20LUN.png">
+    <img src="/img/20220905%20-%20LUN.png">
 </div>
 <div>
-<img src="/img/20220905%20-%20LUN.png">
+    <img src="/img/20220905%20-%20LUN.png">
 </div>
 </div>
 
@@ -112,8 +112,17 @@ gap: 5px;
 </div>
 </div>
 
-
-<p><a href="/img/20211212%20-%20MercurioValpo.png"><img src="/img/20211212%20-%20MercurioValpo.png" alt="Mercurio Valparaíso" width="100" height="150" /></a> <a href="/img/20210411%20-%20MercurioValpo.png"><img src="/img/20210411%20-%20MercurioValpo.png" alt="Mercurio Valparaíso" width="100" height="150" /></a></p>
+<div class="parent">
+<div>
+    <img src="/img/20211212%20-%20MercurioValpo.png"> 
+  </div>
+  <div>
+    <img src="/img/20210411%20-%20MercurioValpo.png"> 
+  </div>
+  <div>
+    <img src="/img/20210411%20-%20MercurioValpo.png">
+</div>
+</div>
 
 <p><a href="/img/20211212%20-%20AustralOsorno.png"><img src="/img/20211212%20-%20AustralOsorno.png" alt="Austral Osorno" width="100" height="150" /></a> <a href="/img/20210411%20-%20AustralOsorno.png"><img src="/img/20210411%20-%20AustralOsorno.png" alt="Austral Osorno" width="100" height="150" /></a></p>
 <p><a href="/img/20210720%20-%20LUN.png"><img src="/img/20210720%20-%20LUN.png" alt="Las Últimas Noticias" width="100" height="150" /></a></p>
