--- a/covers/index.html
+++ b/covers/index.html
@@ -93,10 +93,10 @@ gap: 5px;
     <img src="/img/20220905%20-%20LUN.png">
 </div>
 <div>
-    <img src="/img/20220905%20-%20LUN.png">
+    <img src="/img/white.png">
 </div>
 <div>
-    <img src="/img/20220905%20-%20LUN.png">
+    <img src="/img/white.png">
 </div>
 </div>
 
@@ -120,7 +120,7 @@ gap: 5px;
     <img src="/img/20210411%20-%20MercurioValpo.png"> 
   </div>
   <div>
-    <img src="/img/20210411%20-%20MercurioValpo.png">
+    <img src="/img/white.png">
 </div>
 </div>
 
